# mage-engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: basic.cpp
include/mage/core/: engine.hpp
src/core/: engine.cpp
